frontend/src/components/TargetButton.scss
@import "../variables.scss";

.message {
  position: absolute;
  right: 30%;
  bottom: 30%;
  background: $primaryColor;
  color: $secondaryColor;
  font-size: 2rem;
  cursor: pointer;
  padding: 3rem 1rem;
  margin: 4.375rem auto;
  width: 30%;
  border-radius: 50px;
  text-align: center;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
  border: 0.15rem solid $secondaryColor;
  p {
    font-size: 1rem;
  }
}

.close {
  position: absolute;
  right: 2rem;
  top: 0.5rem;
}
.targetButton {
  all: unset;
}
.pterodactyle {
  width: 10vw;
  position: absolute;
  top: 20%;
  left: 42%;
  overflow: hidden;
  &:hover {
    filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.2));
    cursor: pointer;
  }
}

.t-rex {
  width: 20vw;
  position: absolute;
  top: 45%;
  left: 60%;
  overflow: hidden;
  &:hover {
    filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.2));
    cursor: pointer;
  }
}

.buttonPtetodactyle {
  all: unset;
}

